force-app/main/default/objects/Account/fields/Amount_of_won_deals__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_won_deals__c</fullName>
    <label>Amount of won deals</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>