force-app/main/default/objects/Account/fields/Call_for_Service__c.field-meta.xml
<CustomField>
    <fullName>Call_for_Service__c</fullName>
    <formula>IF( DATE( YEAR(Last_won_deal_date__c)+2 , MONTH(Last_won_deal_date__c),DAY(Last_won_deal_date__c) ) &lt;= TODAY(), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call for Service</label>
    <type>Text</type>
</CustomField>