force-app/main/default/objects/Account/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>