force-app/main/default/objects/Account/fields/Last_won_deal_date__c.field-meta.xml
<CustomField>
    <fullName>Last_won_deal_date__c</fullName>
    <label>Last won deal date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>