force-app/main/default/objects/Account/fields/Number_of_deals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_deals__c</fullName>
    <label>Number of deals</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>