force-app/main/default/objects/Account/recordTypes/Custom.recordType-meta.xml
<RecordType>
    <fullName>Custom</fullName>
    <active>true</active>
    <description>This is Sample Record Type</description>
    <label>Custom</label>
</RecordType>