force-app/main/default/objects/Account/validationRules/Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Change</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; ( OR( ISPICKVAL( Type ,&apos;Customer - Direct&apos;) ,ISPICKVAL( Type ,&apos;Customer - Channel&apos;) ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You can’t change the Account name for “Customer – Direct” or “Customer – Channel”</errorMessage>
</ValidationRule>