force-app/main/default/objects/Account/validationRules/US_Address_Anything.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Address_Anything</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND(LEN(BillingState) &gt; 2, NOT(CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:WA:WV:WI:WY&quot;, BillingState ))
),AND(LEN(ShippingState) &gt; 2, NOT(CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:WA:WV:WI:WY&quot;, ShippingState))
),NOT(OR(BillingCountry =&quot;US&quot;,BillingCountry =&quot;USA&quot;,BillingCountry =&quot;United States&quot;, ISBLANK(BillingCountry))),
NOT(OR(ShippingCountry =&quot;US&quot;,ShippingCountry =&quot;USA&quot;,ShippingCountry =&quot;United States&quot;, ISBLANK(ShippingCountry))))</errorConditionFormula>
    <errorMessage>You can not save a new account unless the shipping and billing state fields are valid US state abbreviations, and the country field is either blank or US, USA, or United States.</errorMessage>
</ValidationRule>